--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <div id="home" class="div1">
         <div class="div11">
             <span style="font-size: 2.5em; font-weight: bold;">Hey, I’m </span><br><span style="font-size: 3em;color: #e91263;">Sofiane Achab </span><br>
-            <img src="img/trai.png"><br>
+            <img src="img/trait.png"><br>
             <div style="font-size: 1.5em; margin-top: 20px;">A <span style="color: #e91263;">VIDEO EDITOR</span> <br>Transforming Ideas into Captivating Visual Stories</div>
         </div>
         <div class="div111">
