--- a/index.html
+++ b/index.html
@@ -127,14 +127,14 @@
         <div class="ready">READY FOR YOUR <br><span style="color: #e91263;">NEXT</span> VIDEO <span style="color: #e91263;">?</span></div>
         <div ><a href="#home"><img src="img/icons8-up-arrow-24.png" ></div></a>
         <div id="sm" class="icons">
-            <img src="img/linkedin.png">
-            <img src="img/discord.png" width="45px">
-            <img src="img/insta.png">
+            <a href="https://www.linkedin.com/in/sofiane-achab-71892729b/"><img src="img/linkedin.png"></a>
+            <a href="https://discordapp.com/users/705527579834318930"><img src="img/discord.png" width="45px"></a>
+            <a href="https://www.instagram.com/laymne01/"><img src="img/insta.png"></a>
         </div>
     </section>
     <!-- fin du 6eme div-->
     <footer>
-        <p>All Rights Reserved &copy; 2024 | Coded By <a href="#">Recay</a></p>
+        <p>All Rights Reserved &copy; 2024 | Coded By <a href="https://www.linkedin.com/in/okba-moulahoum-848769298/">Recay</a></p>
         
     </footer>
 </body>
