--- a/index.html
+++ b/index.html
@@ -44,9 +44,8 @@
             <h1 style="color: #e91e63;margin-bottom: 20px;">More<br>
             About Me : </h1>
             Lorem ipsum dolor, sit amet consectetur adipisicing elit. Officiis laboriosam deleniti at ad voluptatibus, necessitatibus repellendus<br> eveniet non eligendi aliquam, saepe officia, iure incidunt do<br>lorum totam. Quam modi sint rerum.
-            Cum asperiores cumque consequatur earum ducimus quo velit optio! Exercitationem ut at, praesentium m<br>agnam odio cumque delectus sed minus, labor<br>um obcaecati et quasi nobis tempore, quae totam maiores voluptate error?
-            Possimus hic fuga vitae aspernatur facere tempore neque a repudiandae nihil nesciunt, quibusdam <br>debitis autem velit voluptas voluptatibus deserunt?<br> Doloremque dolorem, doloribus illum quae voluptatum animi blanditiis odit ipsum maiores.
-        </div>
+            Cum asperiores cumque consequatur earum ducimus quo velit optio! Exercitationem ut at, praesentium m<br>Doloremque dolorem, doloribusmi blanditiis odit ipsum.
+            </div>
     </div>
     <!-- fin du 2eme div-->
 
