--- a/index.html
+++ b/index.html
@@ -37,11 +37,13 @@
 
     <!-- 2eme div-->
     <div id="abt" class="div2">
+        <h1 class="abt1" style="color: #e91e63;margin-bottom: 20px;">More<br>
+            About Me : </h1>
         <div class="div22">
             <img src="img/abt.jpg" >
         </div>
         <div class="div23">
-            <h1 style="color: #e91e63;margin-bottom: 20px;">More<br>
+            <h1 class="abt2" style="color: #e91e63;margin-bottom: 20px;">More<br>
             About Me : </h1>
             Lorem ipsum dolor, sit amet consectetur adipisicing elit. Officiis laboriosam deleniti at ad voluptatibus, necessitatibus repellendus<br> eveniet non eligendi aliquam, saepe officia, iure incidunt do<br>lorum totam. Quam modi sint rerum.
             Cum asperiores cumque consequatur earum ducimus quo velit optio! Exercitationem ut at, praesentium m<br>Doloremque dolorem, doloribusmi blanditiis odit ipsum.
