--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
     <!-- 2eme div-->
     <div id="abt" class="div2">
-        <h1 class="abt1" style="color: #e91e63;margin-bottom: 20px;">More<br>
+        <h1 class="abt1" style="color: #e91e63;">More<br>
             About Me : </h1>
         <div class="div22">
             <img src="img/abt.jpg" >
