--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <div class="div11">
             <span style="font-size: 2.5em; font-weight: bold;">Hey, I’m </span><br><span style="font-size: 3em;color: #e91263;">Sofiane Achab </span><br>
             <img src="img/trait.png"><br>
-            <div style="font-size: 1.5em; margin-top: 20px;">A <span style="color: #e91263;">VIDEO EDITOR</span> <br>Transforming Ideas into Captivating Visual Stories</div>
+            <div class="disc">A <span style="color: #e91263;">VIDEO EDITOR</span> <br>Transforming Ideas into Captivating Visual Stories</div>
         </div>
         <div class="div111">
             <img src="img/sfpng.png" width="630">
