--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <!-- 1er div-->
     <div id="home" class="div1">
         <div class="div11">
-            <span style="font-size: 2.5em; font-weight: bold;">Hey, I’m </span><br><span style="font-size: 3em;color: #e91263;">Sofiane Achab </span><br>
+            <span class="span1">Hey, I’m </span><br><span class="span2">Sofiane Achab </span><br>
             <img src="img/trait.png"><br>
             <div class="disc">A <span style="color: #e91263;">VIDEO EDITOR</span> <br>Transforming Ideas into Captivating Visual Stories</div>
         </div>
@@ -69,7 +69,7 @@
 
 
     <!-- 4eme div-->
-    <h1 id="mys" style="text-align: center;color: #e91263;background-color: black;text-decoration: underline;">My Services : </h1>
+    <h1 id="mys" style="text-align: center;color: #e91263;text-decoration: underline;">My Services : </h1>
     <div class="services-container">
         <div class="services-paln">
             <div class="plan-icon">
@@ -89,6 +89,7 @@
             <div class="plan-title">Long Videos</div>
             <div class="plan-disc"> bla bla bla bla bla bla bla bla bla </div>
         </div>
+        
     </div>
     <!-- fin du 4eme div-->
 
@@ -101,7 +102,7 @@
             <div class="contact-wrapper">
                 <div class="contact-form">
                     <form>
-                        <h2>Contact us</h2>
+                        <h2>Contact Me</h2>
                     <div class="form-group">
                         <input type="text" name="name" placeholder="Your Name" required>
                     </div>
@@ -126,7 +127,7 @@
     <!-- 6eme div-->
     <section>
         <div class="ready">READY FOR YOUR <br><span style="color: #e91263;">NEXT</span> VIDEO <span style="color: #e91263;">?</span></div>
-        <div ><a href="#home"><img src="img/icons8-up-arrow-24.png" ></div></a>
+        <div class="fleche"><a href="#home"><img src="img/icons8-up-arrow-24.png" ></div></a>
         <div id="sm" class="icons">
             <a href="https://www.linkedin.com/in/sofiane-achab-71892729b/"><img src="img/linkedin.png"></a>
             <a href="https://discordapp.com/users/705527579834318930"><img src="img/discord.png" width="45px"></a>
@@ -138,5 +139,6 @@
         <p>All Rights Reserved &copy; 2024 | Coded By <a href="https://www.linkedin.com/in/okba-moulahoum-848769298/">Recay</a></p>
         
     </footer>
+
 </body>
 </html>
