adjusted skills bar and the red line

--- a/index.html
+++ b/index.html
@@ -45,10 +45,10 @@
     <!-- fin du 1er div-->
 
     <!-- 2eme div-->
-    <div id="abt" class="div2" >
+    <div id="abt" class="div2" data-aos="fade-right">
         <h1  class="abt1" style="color: #e91e63;">More<br>
             About Me : </h1>
-        <div class="div22" data-aos="fade-right">
+        <div class="div22">
             <img src="img/abt.jpg" >
         </div>
         <div class="div23" data-aos="fade-left">
