--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <a href="#mys">services</a>
             <a href="#contact">Contact me</a>
         </div>
-        <a href="#sm" class="boutton">Social Media</a>
+        <a href="#sm" class="boutton" id="hbtn">Social Media</a>
     </header>
     <!-- 1er div-->
     <div id="home" class="div1">
@@ -153,5 +153,6 @@
     <script>
         AOS.init();
     </script>
+    <script src="index.js"></script>
 </body>
 </html>
